--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_svg: ^1.1.4
+  auto_size_text: ^3.0.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
